...
                  color={colors.destructiveForeground}
                  size="small"
                  style={{ marginRight: 8 }}
                />
              ) : null}
              <Text className="font-medium text-destructive-foreground">
                {isInPath ? "Added to My Path" : isSaving ? "Adding" : "Add to My Path"}
              </Text>
            </Button>
          </View>
        </ScrollView>
      </SafeAreaView>
    </View>
...
